# wterm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TUI_MIGRATION.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  pr.yml  security-audit.yml
app/: install.sh  uninstall.sh  wterm.sh
cmake/: CITargets.cmake
include/wterm/: common.h  tui_interface.h
scripts/: build.sh  hotspot_nm.sh  install.sh  recover.sh  uninstall.sh
src/: fzf_ui.c  fzf_ui.h  main.c
src/core/: connection.c  connection.h  error_handler.c  error_handler.h  error_queue.c  error_queue.h  hotspot_manager.c  hotspot_manager.h  hotspot_ui.c  hotspot_ui.h  network_scanner.c  network_scanner.h
src/core/network_backends/: backend_interface.h  backend_manager.c  nmcli_backend.c
src/tui/: README.md  tui_interface.c  tui_test.c
src/utils/: input_sanitizer.c  input_sanitizer.h  iw_helper.c  iw_helper.h  safe_exec.c  safe_exec.h  string_utils.c  string_utils.h
tests/: CMakeLists.txt  test_integration.c  test_network_scanner.c  test_security.c  test_string_utils.c  test_utils.c  test_utils.h
